Remove padding to fix iPhone issue
While it looks fine in dev tools, I discovered there is an issue with the way this page displays on iPhones (side-bar overlaps body). Trying removing padding for that media query for testing purposes

--- a/styles.css
+++ b/styles.css
@@ -264,5 +264,8 @@ button.delete-btn:active {
     .header {
         grid-column: 1 / -1;
     }
+    .container {
+        padding: 0;
+    }
 }
 
